# nurikit

./: .clang-format  .clang-tidy  .clangd  .commitlintrc.yaml  .gitignore  .gitlint  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  ThirdPartyLicenses.md  cmake-variants.json  gcovr.cfg  out.perf-folded  pyproject.toml.in  ruff.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  codecov.yml  constraints.txt  dependabot.yaml  release.yml  ubsanignore.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/patches/: pybind11-stubgen-union-member-imports.patch
.github/scripts/: build-lib.sh  setup-deps.sh  wheel-targets.sh
.github/workflows/: _base-build.yaml  _check-want-test.yaml  (+33 more)
bench/: CMakeLists.txt
cmake/: FindSphinx.cmake  NuriKitClearCoverage.cmake  NuriKitClearStubs.cmake  NuriKitClearTestDiscovery.cmake  NuriKitConfig.cmake.in  NuriKitPythonUtils.cmake  NuriKitTest.cmake  NuriKitUtils.cmake  NurikitClearStubs.cmake  NurikitPythonUtils.cmake  NurikitTest.cmake  NurikitUtils.cmake  nurikit_config.h.in
debian/: changelog  clean  control  copyright  libnuri-dev.docs  libnuri-dev.install  libnuri0.install  libnuri0.lintian-overrides  python3-nurikit.install  rules  watch
docs/: CMakeLists.txt  Doxyfile.in  environment.yaml  refs.bib
fuzz/: CMakeLists.txt
include/: CMakeLists.txt
include/nuri/: eigen_config.h  iterator.h  meta.h  nurikit_config.h.in  random.h  utils.h
include/nuri/algo/: crdgen.h  guess.h  optim.h  pcharge.h  rings.h
include/nuri/core/: bool_matrix.h  element.h  geometry.h  graph.h  graph_adaptor.h  graph_vf2pp.h  molecule.h  property_map.h
include/nuri/core/container/: bool_matrix.h  compact_map.h  container_ext.h  dumb_buffer.h  index_set.h  linear_queue.h  property_map.h
include/nuri/core/graph/: adaptor.h  graph.h  subgraph.h  traits.h  vf2pp.h
include/nuri/desc/: pcharge.h  surface.h
include/nuri/fmt/: base.h  cif.h  mmcif.h  mol2.h  pdb.h  sdf.h  smiles.h
include/nuri/tools/: chimera.h  galign.h  tm.h
python/: .clang-format  .clang-tidy  .flake8  CMakeLists.txt
python/docs/: CMakeLists.txt  bib.rst  conf.py.in  cpp-bridge.rst  index.rst  modules.rst  nuri.algo.rst  nuri.core.rst  nuri.desc.rst  nuri.fmt.rst  nuri.rst  nuri.tools.rst
python/docs/_static/css/: rtd-property.css
python/docs/data/: refs.bib
python/include/nuri/python/: config.h  exception.h  typing.h  utils.h
python/include/nuri/python/core/: containers.h  core_module.h
python/nuri/: __init__.py  _log_adapter.cpp  _version.py.in  utils.h
python/nuri/core/: __init__.py  element.cpp
python/src/: CMakeLists.txt
python/src/nuri/: __init__.py  _log_adapter.cpp  _log_adapter.py  _log_interface.cpp  _log_interface_module.cpp  _masquerade_support.py  _version.py.in
python/src/nuri/_support/: __init__.py  log_adapter.py
python/src/nuri/algo/: algo_module.cpp
python/src/nuri/core/: __init__.py  _core.cpp  _core_module.cpp  _masquerade_support.py  containers.cpp  core_internal.h  core_module.cpp  element.cpp  geometry.cpp  geometry_module.cpp  molecule.cpp  substructure.cpp
python/src/nuri/desc/: desc_module.cpp
python/src/nuri/fmt/: cif.cpp  fmt_internal.h  fmt_module.cpp  pdb.cpp
python/src/nuri/tools/: __init__.py  chimera_module.cpp  galign_module.cpp  tm_module.cpp
python/test/: conftest.py
python/test/algo/: crdgen_test.py  guess_test.py  rings_test.py
python/test/core/: __init__.py  conftest.py  eigen_view_test.py  element_test.py  geometry_test.py  invalidation_test.py  masquerade_test.py  molecule_test.py  numpy_cvt_test.py  properties_test.py  random_test.py  substructure_test.py
python/test/desc/: surface_test.py
python/test/fmt/: cif_compat_test.py  cif_test.py  common_test.py  mmcif_test.py  mol2_test.py  pdb_test.py  sdf_test.py  smi_test.py
python/test/tools/: chimera_test.py  galign_test.py  tm_test.py
scripts/: check_coverage.sh  fuzz.sh  run_clang_tools.sh
src/: CMakeLists.txt  graph.h  main.cpp
src/algo/: crdgen.cpp  guess.cpp  guess_2d.cpp  optim.cpp  rings.cpp
src/algo/guess/: 2d.cpp  3d.cpp
src/algo/optim/: .clang-tidy  bfgs.cpp  l_bfgs.cpp  l_bfgs_b.cpp  l_bfgs_base.cpp  lnsrch.cpp  nelder_mead.cpp  optim_internal.h
src/algo/pcharge/: gasteiger.cpp
src/core/: element.cpp  geometry.cpp  graph.cpp  molecule.cpp  molecule_algorithms.cpp  random.cpp
src/core/container/: index_set.cpp
src/core/geometry/: align.cpp  embed.cpp  misc.cpp  octree.cpp  voxel_grid.cpp
src/core/molecule/: addh.cpp  molecule.cpp  mutator.cpp  sanitizer.cpp
src/desc/pcharge/: gasteiger.cpp
src/desc/surface/: sasa.cpp
src/fmt/: base.cpp  cif.cpp  fmt_internal.h  mmcif.cpp  mol2.cpp  pdb.cpp  sdf.cpp  smiles.cpp
src/tools/: chimera.cpp  tm.cpp
src/tools/galign/: flexible.cpp  galign.cpp  prep.cpp  rigid.cpp  score.cpp
test/: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  graph_test.cpp
test/algo/: crdgen_test.cpp  guess_test.cpp  optim_test.cpp  pcharge_test.cpp  rings_test.cpp
test/algo/optim/: bfgs_test.cpp  l_bfgs_b_test.cpp  l_bfgs_base_test.cpp  l_bfgs_test.cpp  nelder_mead_test.cpp
test/core/: CMakeLists.txt  bool_matrix_test.cpp  element_test.cpp  extra_test.cpp  geometry_test.cpp  graph_adaptor_test.cpp  graph_test.cpp  graph_vf2pp_test.cpp  molecule_addh_test.cpp  molecule_substructure_test.cpp  molecule_test.cpp  random_test.cpp  subgraph_test.cpp
test/core/graph/: adaptor_test.cpp  graph_test.cpp  subgraph_test.cpp  vf2pp_test.cpp
test/core/molecule/: addh_test.cpp  molecule_test.cpp  substructure_test.cpp
test/desc/: pcharge_test.cpp  surface_test.cpp
test/fmt/: base_test.cpp  cif_test.cpp  fmt_test_common.h  mmcif_test.cpp  mol2_test.cpp  pdb_test.cpp  sdf_test.cpp  smiles_test.cpp
test/include/: fmt_test_common.h  test_utils.h
test/test_data/: 1alx.cif  3cye_part.cif  components_stdres.cif
test/tools/: chimera_test.cpp  galign_test.cpp  tm_test.cpp
test/tools/galign/: flexible_test.cpp  galign_test.cpp  prep_test.cpp  rigid_test.cpp
(+97 files in other folders)
